# BrainACTIV

./: pyproject.toml
brainactiv/dataset/: nsd.py  nsd_clip.py
brainactiv/methods/: measurements.py
